@@ -136,35 +136,14 @@ int fts_sched_remove( fts_object_t *obj)
   return -1;
 }
 
-static void my_fd_zero( fd_set *fds) __attribute__ ((no_check_memory_usage));
-
-static void my_fd_zero( fd_set *fds)
-{
-  FD_ZERO( fds);
-}
-
-static void my_fd_set( int fd, fd_set *fds) __attribute__ ((no_check_memory_usage));
-
-static void my_fd_set( int fd, fd_set *fds)
-{
-  FD_SET( fd, fds);
-}
-
-static int my_fd_isset( int fd, fd_set *fds) __attribute__ ((no_check_memory_usage));
-
-static int my_fd_isset( int fd, fd_set *fds)
-{
-  return FD_ISSET( fd, fds);
-}
-
 static int compute_fds( fts_sched_t *sched, fd_set *readfds, fd_set *writefds, fd_set *exceptfds)
 {
   sched_callback_t *callback;
   int n_fd = 0;
 
-  my_fd_zero( readfds);
-  my_fd_zero( writefds);
-  my_fd_zero( exceptfds);
+  FD_ZERO( readfds);
+  FD_ZERO( writefds);
+  FD_ZERO( exceptfds);
 
   n_fd = 0;
   for ( callback = sched->callback_head; callback; callback = callback->next)
@@ -176,11 +155,11 @@ static int compute_fds( fts_sched_t *sched, fd_set *readfds, fd_set *writefds, f
 	n_fd = callback->fd;
 
       if (callback->flags == FTS_SCHED_READ)
-	my_fd_set( callback->fd, readfds);
+	FD_SET( callback->fd, readfds);
       else
-	my_fd_set( callback->fd, writefds);
+	FD_SET( callback->fd, writefds);
 
-      my_fd_set( callback->fd, exceptfds);
+      FD_SET( callback->fd, exceptfds);
     }
 
   return n_fd;
@@ -218,12 +197,12 @@ static void run_select( fts_sched_t *sched, int n_fd, fd_set *readfds, fd_set *w
 
       fts_set_int( &a, fd);
 
-      if ( callback->error_mth && my_fd_isset( fd, exceptfds))
+      if ( callback->error_mth && FD_ISSET( fd, exceptfds))
 	(*callback->error_mth)( callback->object, fts_system_inlet, fts_s_sched_error, 1, &a);
       else
 	{
-	  if ( (callback->flags == FTS_SCHED_READ && my_fd_isset( fd, readfds))
-	       || (callback->flags == FTS_SCHED_WRITE && my_fd_isset( fd, writefds)) )
+	  if ( (callback->flags == FTS_SCHED_READ && FD_ISSET( fd, readfds))
+	       || (callback->flags == FTS_SCHED_WRITE && FD_ISSET( fd, writefds)) )
 	    (*callback->ready_mth)( callback->object, fts_system_inlet, fts_s_sched_ready, 1, &a);
 	}
     }
